--- a/index.html
+++ b/index.html
@@ -9,17 +9,11 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <nav>
-        <section class="logo">
-            <img src="/img/EDGE Logo.png" alt="EDGE by KKPS">
-        </section>
-    </nav>
-
     <header>
         <div class="container">
             <!-- START EDGE -->
             <section class="header-info">
-                <img src="/img/EDGE_Header.png" alt="Start EDGE For Your Best Investment Experience">
+                <img src="/img/Header.png" alt="Start EDGE For Your Best Investment Experience">
             </section>
         </div>
     </header>
@@ -29,14 +23,6 @@
             <!-- จุดเริ่มต้นการลงทุน -->
             <section class="start-edge">
                 <img src="/img/EDGE_Body.png" alt="">
-                <!-- <h1>จุดเริ่มต้นการลงทุนแบบมืออาชีพให้ง่ายกว่่าและไกลกว่า ครอบคลุมทุกผลิตภัณฑ์ที่ลงทุนทั่วโลก</h1>
-                <div class="header-btn">
-                    <a href="#" class="open-account">เปิดบัญชีลงทุน</a>
-                </div>
-                <div class="header-tel">
-                    <a href="#" class="contact-tel">โทร 02 305 9559</a>
-                </div>
-                <p>*EDGE เหมาะสำหรับลงทุนตั้งแต่ 2 ล้านบาท ขึ้นไป</p> -->
             </section>
         </div>
         <div class="container">
@@ -65,7 +51,19 @@
             </section>
             <!-- EDGE แพลตฟอร์ม -->
             <section class="platform">
-                <img src="/img/EDGE_Platform.png" alt="">
+                <h1><span class="orange">EDGE </span><span class="violet">แพลตฟอร์มการลงทุนที่ดีที่สุดสำหรับคุณ</span></h1>
+                <section class="platform-info">
+                    <p>“EDGE” แพลตฟอร์มการลงทุนที่ทำให้คุณเข้าถึงผลิตภัณฑ์ทางการเงินที่หลากหลาย</p>
+                    <p>โดยมีทีมที่ปรึกษาการลงทุนและวางแผนทางการเงินที่พร้อมดูแลให้คำปรึกษา</p>
+                    <p>อย่างใกล้ชิด พร้อมทีมงานวิจัยคุณภาพที่ได้รับการยอมรับในระดับสากล</p></section>
+                </section>
+                <div class="platform-btn">
+                    <a href="https://kkpsecurities.typeform.com/to/wOp0V8dK" target="_blank"><img src="/img/Call action.png" alt=""></a>
+                    <a href="tel:023059559"><img src="/img/Button.png" alt=""></a>
+                </div>
+                <section class="platform-info-2">
+                    <p><span>*EDGE เหมาะสำหรับนักลงทุนตั้งแต่</span><span class="orange"> 2 ล้านบาท </span><span>ขึ้นไป</span></p>
+                </section>
             </section>
         </div>
     </article>
