--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
                     </div>
                 </div>
                 <div id="block2">
-                    <div id="edge_tab">
-                        <img src="/img/EDGE_tab.png" alt="">
+                    <div id="edge_tab"><img src="/img/EDGE_tab.png" alt="">
                     </div>
-                    <h1>จุดเริ่มต้นการลงทุนแบบมืออาชีพ<br>ให้ง่ายกว่าและไกลกว่า ครอบคลุม<br>ทุกผลิตภัณฑ์การลงทุนทั่วโลก</h1>
+                        <h1>จุดเริ่มต้นการลงทุนแบบมืออาชีพ<br>ให้ง่ายกว่าและไกลกว่า ครอบคลุม<br>ทุกผลิตภัณฑ์การลงทุนทั่วโลก</h1>
                     <div class="start-edge-btn">
                         <a href="https://kkpsecurities.typeform.com/to/wOp0V8dK" target="_blank"><img src="/img/Call action.png" alt=""></a>
                         <a href="tel:023059559"><img src="/img/Button.png" alt=""></a>
                     </div>
+                    
                     <section class="start-edge-info">
                         <p><span>*EDGE เหมาะสำหรับนักลงทุนตั้งแต่</span><span class="orange"> 2 ล้านบาท </span><span>ขึ้นไป</span></p>
                     </section>
                 </div>
             </div>
-    </div>
+        </div>
         <div class="container">
             <!-- ทำไมต้องให้ EDGE ช่วย -->
             <section class="why-edge">
@@ -70,9 +70,9 @@
             <section class="platform">
                 <h1><span class="orange">EDGE </span><span class="violet">แพลตฟอร์มการลงทุนที่ดีที่สุดสำหรับคุณ</span></h1>
                 <section class="platform-info">
-                    <p>“EDGE” แพลตฟอร์มการลงทุนที่ทำให้คุณเข้าถึงผลิตภัณฑ์ทางการเงินที่หลากหลาย</p>
-                    <p>โดยมีทีมที่ปรึกษาการลงทุนและวางแผนทางการเงินที่พร้อมดูแลให้คำปรึกษา</p>
-                    <p>อย่างใกล้ชิด พร้อมทีมงานวิจัยคุณภาพที่ได้รับการยอมรับในระดับสากล</p></section>
+                    <p>เข้าถึงผลิตภัณฑ์ทางการเงินที่หลากหลาย โดยมีทีมที่ปรึกษาการลงทุน</p>
+                    <p>และวางแผนทางการเงินที่พร้อมดูแลให้คำปรึกษาอย่างใกล้ชิด</p>
+                    <p>พร้อมทีมงานวิจัยคุณภาพที่ได้รับการยอมรับในระดับสากล</p></section>
                 </section>
                 <div class="platform-btn">
                     <a href="https://kkpsecurities.typeform.com/to/wOp0V8dK" target="_blank"><img src="/img/Call action.png" alt=""></a>
@@ -86,7 +86,61 @@
     </article>
 
     <footer>
-            <img src="/img/Footer.png" alt="">
+        <div id="footer_container">
+            <div id="footer1">
+                <div id="footer_tab">
+                    <img src="/img/EDGE_tab.png" alt="">
+                </div>
+                <div id="achieve_tomorrow">
+                    <h1>Achieve Tomorrow,</h1>
+                </div>
+                <div id="today">
+                    <h1 class="gold">Today</h1>
+                </div>
+                <div id="Edge_logo">
+                    <img src="/img/EDGE Logo.png" alt="">
+                    <p>A member of Kiatnakin <br>Phatra Financial Group</p>
+                </div>
+            </div>
+
+            <div id="footer2">
+                <div id="footer2-1">
+                    <div id="follow-us">
+                        <h1>Follow us on</h1>
+                        <div id="follow_us">
+                            <img src="/img/facebook.png" alt="">
+                            <img src="/img/youtube.png" alt="">
+                            <img src="/img/line.png" alt="">
+                        </div>
+                    </div>
+                    <div id="download">
+                        <h1>KKP Securities</h1>
+                        <div id="download-qr-store">
+                            <div id="qr-download">
+                                <img src="/img/download_qr_code.png" alt="">
+                            </div>
+                            <div id="btn-download">
+                                <img src="/img/download_app_store.png" alt="">
+                                <img src="/img/download_google_play.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="footer2-2">
+                    <div id="Contact Us">
+                        <h1>Contact Us</h1>
+                        <p>clientservice@kkpfg.com</p>
+                    </div>
+                    <div id="address">
+                        <h1>Headquarter</h1>
+                        <p>252/6 Ratchadaphisek Rd.,<br>Huaykwang, Bangkok 10310<br>Thailand<br>Call: 02 305 9559</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bar">
+            <img src="/img/footer_bar.png" alt="">
+        </div>
     </footer>
 </body>
 </html>
