--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
             
         </div>
         <div class="supergraphic">
-            <!-- EDGE จุดเริ่มต้นการลงทุนแบบมืออาชีพ -->
-            <section class="manage-by-pro">
-                <img src="/img/EDGE_Manage_by_Professional.png" alt="">
-            </section>
+            <div class="edge-professional">
+                <img src="/img/EDGE_professional.png" alt="">
+            </div>
         </div>
     </main>
 
@@ -97,43 +96,49 @@
                 <div id="today">
                     <h1 class="gold">Today</h1>
                 </div>
-                <div id="Edge_logo">
+                <div id="edge_logo">
                     <img src="/img/EDGE Logo.png" alt="">
                     <p>A member of Kiatnakin <br>Phatra Financial Group</p>
                 </div>
             </div>
 
             <div id="footer2">
-                <div id="footer2-1">
-                    <div id="follow-us">
+                <div id="footer2_1">
+                    <div id="follow_us_header">
                         <h1>Follow us on</h1>
                         <div id="follow_us">
-                            <img src="/img/facebook.png" alt="">
-                            <img src="/img/youtube.png" alt="">
-                            <img src="/img/line.png" alt="">
+                            <a href="https://www.facebook.com/edgeinvestTH" target="_blank"><img src="/img/facebook.png" alt=""></a>
+                            <a href="https://www.youtube.com/c/edgeinvest" target="_blank"><img src="/img/youtube.png" alt=""></a>
+                            <a href="https://line.me/R/ti/p/%40kkps" target="_blank"><img src="/img/line.png" alt=""></a>
                         </div>
                     </div>
                     <div id="download">
                         <h1>KKP Securities</h1>
-                        <div id="download-qr-store">
-                            <div id="qr-download">
+                        <div id="download_qr_store">
+                            <div id="qr_download">
                                 <img src="/img/download_qr_code.png" alt="">
                             </div>
-                            <div id="btn-download">
-                                <img src="/img/download_app_store.png" alt="">
-                                <img src="/img/download_google_play.png" alt="">
+                            <div id="btn_download">
+                                <div id="btn_download_apple">
+                                    <a href="https://kkpsecurities.co/3xEhPMB" target="_blank"><img src="/img/download_app_store.png" alt=""></a>
+                                </div>
+                                <div id="btn_download_android">
+                                    <a href="https://kkpsecurities.co/3OqNLKa" target="_blank"><img src="/img/download_google_play.png" alt=""></a>
+                                    
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div id="footer2-2">
-                    <div id="Contact Us">
+                <div id="footer2_2">
+                    <div id="contact_us">
                         <h1>Contact Us</h1>
                         <p>clientservice@kkpfg.com</p>
                     </div>
                     <div id="address">
                         <h1>Headquarter</h1>
-                        <p>252/6 Ratchadaphisek Rd.,<br>Huaykwang, Bangkok 10310<br>Thailand<br>Call: 02 305 9559</p>
+                        <p>252/6 Ratchadaphisek Rd.,<br>Huaykwang, Bangkok 10310<br>Thailand</p>
+                        <p>Call: 02 305 9559</p>
                     </div>
                 </div>
             </div>
