--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                     <div id="follow_us_header">
                         <h1>Follow us on</h1>
                         <div id="follow_us">
-                            <a href="https://www.facebook.com/edgeinvestTH" target="_blank"><img src="/img/facebook.png" alt=""></a>
-                            <a href="https://www.youtube.com/c/edgeinvest" target="_blank"><img src="/img/youtube.png" alt=""></a>
-                            <a href="https://line.me/R/ti/p/%40kkps" target="_blank"><img src="/img/line.png" alt=""></a>
+                            <a href="https://kkpsecurities.co/EDGEInvest" target="_blank"><img src="/img/facebook.png" alt=""></a>
+                            <a href="https://kkpsecurities.co/YouTubeEDGEInvest" target="_blank"><img src="/img/youtube.png" alt=""></a>
+                            <a href="hhttps://kkpsecurities.co/EDGEkkpsline" target="_blank"><img src="/img/line.png" alt=""></a>
                         </div>
                     </div>
                     <div id="download">
