--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <title>EDGE Investment - Start EDGE by KKP</title>
-
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-
+    <title>EDGE Invest by KKP</title>
+    <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
