--- a/index.html
+++ b/index.html
@@ -50,15 +50,13 @@
         <div class="container">
             <!-- ทำไมต้องให้ EDGE ช่วย -->
             <section id="why-edge">
-                <img src="/img/Why_EDGE.png" alt="ทำไมต้อง EDGE by KKP">
+                <img src="/img/why_EDGE.png" alt="ทำไมต้อง EDGE by KKP">
             </section>
         </div>
-        <div class="container">
-            <!-- EDGE จุดเริ่มต้นการลงทุนแบบมืออาชีพ -->
-            <div class="supergraphic">
-                <div id="edge-professional">
-                    <img src="/img/EDGE_professional.png" alt="EDGE มืออาชีพ หลักทรัพย์เกียรตินาคินภัทร ประสบการณ์ ความเชี่ยวชาญ การเงิน ความสำเร็จ">
-                </div>
+        <!-- EDGE จุดเริ่มต้นการลงทุนแบบมืออาชีพ -->
+        <div class="supergraphic">
+            <div id="edge-professional">
+                <img src="/img/EDGE_professional.png" alt="EDGE มืออาชีพ หลักทรัพย์เกียรตินาคินภัทร ประสบการณ์ ความเชี่ยวชาญ การเงิน ความสำเร็จ">
             </div>
         </div>
     </main>
@@ -152,7 +150,7 @@
                     </div>
                     <div id="address">
                         <h1>Headquarter</h1>
-                        <p>209 KKP Tower, Sukhumvit 21<br>(Asoke) Khlong Toei Nuea<br>Wattana, Bangkok 10110</p>
+                        <p>209 KKP Tower, Sukhumvit 21<br>(Asoke) Khlong Toei Nuea,<br>Wattana, Bangkok 10110</p>
                         <p>Call: 02 305 9559</p>
                     </div>
                 </div>
