--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
     <title>EDGE Invest by KKP</title>
-    <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <div class="container">
             <!-- START EDGE Header-->
             <section class="header-info">
-                <img src="/img/Header.png" alt="Start EDGE For Your Best Investment Experience">
+                <img src="./img/Header.png" alt="Start EDGE For Your Best Investment Experience">
             </section>
         </div>
     </header>
@@ -28,17 +28,17 @@
                 <!-- image -->
                 <div id="block1">
                     <div id="open-account-image">
-                        <img src="/img/Start_EDGE_header.png" alt="EDGE persona">
+                        <img src="./img/Start_EDGE_header.png" alt="EDGE persona">
                     </div>
                 </div>
                 <!-- open-account -->
                 <div id="block2">
-                    <div id="edge_tab"><img src="/img/EDGE_tab.png" alt="EDGE line">
+                    <div id="edge_tab"><img src="./img/EDGE_tab.png" alt="EDGE line">
                     </div>
                         <h1>จุดเริ่มต้นการลงทุนแบบมืออาชีพ<br>ให้ง่ายกว่าและไกลกว่า ครอบคลุม<br>ทุกผลิตภัณฑ์การลงทุนทั่วโลก</h1>
                     <div id="start-edge-btn">
-                        <a href="https://kkpsecurities.typeform.com/to/wOp0V8dK" target="_blank"><img src="/img/open-account-btn.png" alt="highlight เปิดบัญชีลงทุน"></a>
-                        <a href="tel:023059559"><img src="/img/tel-btn.png" alt="highlight โทร"></a>
+                        <a href="https://kkpsecurities.typeform.com/to/wOp0V8dK" target="_blank"><img src="./img/open-account-btn.png" alt="highlight เปิดบัญชีลงทุน"></a>
+                        <a href="tel:023059559"><img src="./img/tel-btn.png" alt="highlight โทร"></a>
                     </div>
                     <section id="start-edge-info">
                         <p><span>*EDGE เหมาะสำหรับนักลงทุนตั้งแต่</span><span class="orange"> 2 ล้านบาท </span><span>ขึ้นไป</span></p>
@@ -50,13 +50,13 @@
         <div class="container">
             <!-- ทำไมต้องให้ EDGE ช่วย -->
             <section id="why-edge">
-                <img src="/img/why_EDGE.png" alt="ทำไมต้อง EDGE by KKP">
+                <img src="./img/why_EDGE.png" alt="ทำไมต้อง EDGE by KKP">
             </section>
         </div>
         <!-- EDGE จุดเริ่มต้นการลงทุนแบบมืออาชีพ -->
         <div class="supergraphic">
             <div id="edge-professional">
-                <img src="/img/EDGE_professional.png" alt="EDGE มืออาชีพ หลักทรัพย์เกียรตินาคินภัทร ประสบการณ์ ความเชี่ยวชาญ การเงิน ความสำเร็จ">
+                <img src="./img/EDGE_professional.png" alt="EDGE มืออาชีพ หลักทรัพย์เกียรตินาคินภัทร ประสบการณ์ ความเชี่ยวชาญ การเงิน ความสำเร็จ">
             </div>
         </div>
     </main>
@@ -65,11 +65,11 @@
         <div class="container">
             <!-- ซื้อได้ทุกกองทุน, แผนการลงทุนที่ตอบโจทย์ -->
             <section class="article">
-                <img src="/img/Information_1.png" alt="ซื้อได้ทุกกองทุน ลงทันได้ทั้งในไทย และต่างประเทศ แผนการลงทุนที่ตอบโจทย์ พร้อมที่ปรึกษามืออาชีพ">
+                <img src="./img/Information_1.png" alt="ซื้อได้ทุกกองทุน ลงทันได้ทั้งในไทย และต่างประเทศ แผนการลงทุนที่ตอบโจทย์ พร้อมที่ปรึกษามืออาชีพ">
             </section>
             <!-- สรุปภาพรวม -->
             <section class="article">
-                <img src="/img/Information_2.png" alt="สรุปภาพรวมการลงทุนในที่เดียว">
+                <img src="./img/Information_2.png" alt="สรุปภาพรวมการลงทุนในที่เดียว">
             </section>
         </div>
 
@@ -83,8 +83,8 @@
                     <p>พร้อมทีมงานวิจัยคุณภาพที่ได้รับการยอมรับในระดับสากล</p></section>
                 </section>
                 <div id="platform-btn">
-                    <a href="https://kkpsecurities.typeform.com/to/wOp0V8dK" target="_blank"><img src="/img/open-account-btn.png" alt="EDGE แพลตฟอร์ม เปิดบัญชีลงทุน"></a>
-                    <a href="tel:023059559"><img src="/img/tel-btn.png" alt="EDGE แพลตฟอร์ม โทร"></a>
+                    <a href="https://kkpsecurities.typeform.com/to/wOp0V8dK" target="_blank"><img src="./img/open-account-btn.png" alt="EDGE แพลตฟอร์ม เปิดบัญชีลงทุน"></a>
+                    <a href="tel:023059559"><img src="./img/tel-btn.png" alt="EDGE แพลตฟอร์ม โทร"></a>
                 </div>
                 <section id="platform-info-2">
                     <p><span>*EDGE เหมาะสำหรับนักลงทุนตั้งแต่</span><span class="orange"> 2 ล้านบาท </span><span>ขึ้นไป</span></p>
@@ -98,7 +98,7 @@
             <!-- Achieve Tomorrow, Today -->
             <div id="footer1">
                 <div id="footer_tab">
-                    <img src="/img/EDGE_tab.png" alt="EDGE line">
+                    <img src="./img/EDGE_tab.png" alt="EDGE line">
                 </div>
                 <div id="achieve_tomorrow">
                     <h1>Achieve Tomorrow,</h1>
@@ -107,7 +107,7 @@
                     <h1 class="gold">Today</h1>
                 </div>
                 <div id="edge_logo">
-                    <img src="/img/EDGE_logo.png" alt="EDGE by KKP">
+                    <img src="./img/EDGE_logo.png" alt="EDGE by KKP">
                     <p>A member of Kiatnakin <br>Phatra Financial Group</p>
                 </div>
             </div>
@@ -119,23 +119,23 @@
                     <div id="follow_us_header">
                         <h1>Follow us on</h1>
                         <div id="follow_us">
-                            <a href="https://kkpsecurities.co/EDGEInvest" target="_blank"><img src="/img/facebook.png" alt="EDGE Invest Facebook"></a>
-                            <a href="https://kkpsecurities.co/YouTubeEDGEInvest" target="_blank"><img src="/img/youtube.png" alt="EDGE Invest Youtube"></a>
-                            <a href="https://kkpsecurities.co/EDGEkkpsline" target="_blank"><img src="/img/line.png" alt="KKPS LINE Official Account"></a>
+                            <a href="https://kkpsecurities.co/EDGEInvest" target="_blank"><img src="./img/facebook.png" alt="EDGE Invest Facebook"></a>
+                            <a href="https://kkpsecurities.co/YouTubeEDGEInvest" target="_blank"><img src="./img/youtube.png" alt="EDGE Invest Youtube"></a>
+                            <a href="https://kkpsecurities.co/EDGEkkpsline" target="_blank"><img src="./img/line.png" alt="KKPS LINE Official Account"></a>
                         </div>
                     </div>
                     <div id="download">
                         <h1>KKP Securities</h1>
                         <div id="download_qr_store">
                             <div id="qr_download">
-                                <img src="/img/download_qr_code.png" alt="QR Code Download">
+                                <img src="./img/download_qr_code.png" alt="QR Code Download">
                             </div>
                             <div id="btn_download">
                                 <div id="btn_download_apple">
-                                    <a href="https://kkpsecurities.co/3xEhPMB" target="_blank"><img src="/img/download_app_store.png" alt="KKP Security บน App Store"></a>
+                                    <a href="https://kkpsecurities.co/3xEhPMB" target="_blank"><img src="./img/download_app_store.png" alt="KKP Security บน App Store"></a>
                                 </div>
                                 <div id="btn_download_android">
-                                    <a href="https://kkpsecurities.co/3OqNLKa" target="_blank"><img src="/img/download_google_play.png" alt="KKP Security บน Google Play"></a>
+                                    <a href="https://kkpsecurities.co/3OqNLKa" target="_blank"><img src="./img/download_google_play.png" alt="KKP Security บน Google Play"></a>
                                 </div>
                             </div>
                         </div>
@@ -157,7 +157,7 @@
             </div>
         </div>
         <div class="footer-bar">
-            <img src="/img/footer_bar.png" alt="edge footer">
+            <img src="./img/footer_bar.png" alt="edge footer">
         </div>
     </footer>
 </body>
