--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
 
     <!-- Cookie Consent Banner -->
     <!-- Debug Cookie Banner -->
-    <div class="cookie-consent-banner" style="display: block;">
-    <!-- <div class="cookie-consent-banner"> -->
+    <!-- <div class="cookie-consent-banner" style="display: block;"> -->
+    <div class="cookie-consent-banner">
         <div class="row">
             <div id="cookie-banner-detail-upper" class="col">
                 <span>
