Update email and tel number footer link

--- a/index.html
+++ b/index.html
@@ -186,12 +186,14 @@
                 <div id="footer2_2">
                     <div id="contact_us">
                         <h1>Contact Us</h1>
-                        <p>clientservice@kkpfg.com</p>
+                        <!-- <p>clientservice@kkpfg.com</p> -->
+                        <a href="mailto: clientservice@kkpfg.com">clientservice@kkpfg.com</a>
                     </div>
                     <div id="address">
                         <h1>Headquarter</h1>
                         <p>209 KKP Tower, Sukhumvit 21<br>(Asoke) Khlong Toei Nuea,<br>Wattana, Bangkok 10110</p>
-                        <p>Call: 02 305 9559</p>
+                        <!-- <p>Call: 02 305 9559</p> -->
+                        <a href="tel:023059559">Call: 02 305 9559</a>
                     </div>
                 </div>
             </div>
