--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     <div id="address">
                         <h1>Headquarter</h1>
                         <p>209 KKP Tower, Sukhumvit 21<br>(Asoke) Khlong Toei Nuea,<br>Wattana, Bangkok 10110</p>
-                        <!-- <p>Call: 02 305 9559</p> -->
+                        <p>Call: 02 305 9559</p>
                         <a href="tel:023059559">Call: 02 305 9559</a>
                     </div>
                 </div>
@@ -204,8 +204,6 @@
     </footer>
 
     <!-- Cookie Consent Banner -->
-    <!-- Debug Cookie Banner -->
-    <!-- <div class="cookie-consent-banner" style="display: block;"> -->
     <div class="cookie-consent-banner">
         <div class="row">
             <div id="cookie-banner-detail-upper" class="col">
