--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
+    <meta property="og:image" content="./img/EDGE_logo.png">
+
     <title>EDGE Invest by KKP</title>
     <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
     <link rel="stylesheet" href="./css/main.css">
