change OG image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <meta property="og:image" content="./img/EDGE_logo.png">
+    <meta property="og:image" content="./img/favicon.png">
 
     <title>EDGE Invest by KKP</title>
     <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
