--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
+    <!-- Thumbnail -->
     <meta property="og:image" content="./img/favicon.png">
 
     <title>EDGE Invest by KKP</title>
