--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
 
     <!-- OG Social Media Sharing Material -->
-    <meta property="og:image" content="https://edge.kkpfg.com/image-container/edge-share-content.png" />
+    <!-- <meta property="og:image" content="https://edge.kkpfg.com/image-container/edge-share-content.png" /> -->
+    <meta property="og:image" content="https://i.imgur.com/wMJ41cE.png" />
     <!-- //TODO -->
     <meta property="og:site_name” content=”EDGE Invest" />
     <meta property="og:type" content="website" />
